--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/SmissTake/prenomator#readme",
   "dependencies": {
+    "axios": "^1.4.0",
+    "dotenv": "^16.1.4",
     "typescript": "^5.1.3"
   }
 }
