--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon dist/index.js",
+    "build:dev": "tsc --watch --preserveWatchOutput",
+    "dev": "concurrently \"npm:build:dev\" \"npm:start:dev\""
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,11 @@
     "axios": "^1.4.0",
     "dotenv": "^16.1.4",
     "typescript": "^5.1.3"
+  },
+  "devDependencies": {
+    "@types/node": "^20.2.5",
+    "concurrently": "^8.2.0",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1"
   }
 }
