--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "homepage": "https://github.com/SmissTake/prenomator#readme",
   "dependencies": {
     "axios": "^1.4.0",
-    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.1.4",
+    "jsdom": "^22.1.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.1",
     "@types/node": "^20.2.5",
     "concurrently": "^8.2.0",
     "nodemon": "^2.0.22",
