--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.1.4",
     "jsdom": "^22.1.0",
+    "readline": "^1.3.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
