--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "axios": "^1.4.0",
     "dotenv": "^16.1.4",
     "jsdom": "^22.1.0",
+    "qs": "^6.11.2",
     "readline-sync": "^1.4.10",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@types/jsdom": "^21.1.1",
     "@types/node": "^20.2.5",
+    "@types/qs": "^6.9.7",
     "@types/readline-sync": "^1.4.4",
     "concurrently": "^8.2.0",
     "nodemon": "^2.0.22",
