--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "dotenv": "^16.1.4",
+    "https-proxy-agent": "^7.0.0",
     "jsdom": "^22.1.0",
     "qs": "^6.11.2",
     "readline-sync": "^1.4.10",
