--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 API_URL="API_URL"
 DEFAULT_NAME="DEFAULT_NAME"
-DEFAULT_VOTE_NUMBER="DEFAULT_VOTE_NUMBER"
+DEFAULT_VOTE=10
+DEFAULT_VOTE_NUMBER=5
+LUMINATI_PROXY="LUMINATI_PROXY"
+LUMINATI_PORT=22225
+LUMINATI_USERNAME="LUMINATI_USERNAME"
+LUMINATI_PASSWORD="LUMINATI_PASSWORD"
